# k8s-agent-checkpoint-global

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
benchmarks/: overhead.py
checkpoint/: __init__.py  manager.py  models.py  store.py
examples/: crewai_example.py  custom_loop.py  demo_agent.py
helm/agent-checkpoint/: Chart.yaml  values.yaml
helm/agent-checkpoint/templates/: _helpers.tpl  deployment.yaml  pdb.yaml  pvc.yaml
k8s/: configmap.yaml  deployment.yaml  job.yaml  pdb.yaml  pvc.yaml
tests/: test_manager.py  test_resume.py  test_store.py
