[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-checkpoint"
version = "0.1.0"
description = "Framework-agnostic checkpoint/resume for long-running AI agents on Kubernetes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["ai", "agents", "kubernetes", "checkpoint", "resume", "fault-tolerance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

# SQLite ships with Python's stdlib; no runtime dependencies by default.
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "black>=24",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/AdityaShome/agent-checkpoint"
Issues   = "https://github.com/AdityaShome/agent-checkpoint/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["checkpoint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
